# Tarea1Ros

./: README.md
triciclo_robot/: CMakeLists.txt  package.xml  setup.cfg  setup.py
triciclo_robot/config/: rviz_config.rviz  triciclo_controllers.yaml
triciclo_robot/launch/: controllers.launch.py  display_rviz.launch.py  gazebo.launch.py
triciclo_robot/urdf/: triciclo.xacro
triciclo_robot/worlds/: empty.word
